// This file is automatically generated by sila2lib.proto_builder.proto_builder version 0.2.0
// :generation date: 2019-11-10 12:47:54
//
// ---- PLEASE DO NOT MODIFY MANUALLY !! ---

syntax = "proto3";
import "SiLAFramework.proto";
package sila2.org.silastandard.core.commands.pausecontroller.v1;

// Feature: Pause Controller
//   
//       Allows to pause or resume a currently running Observable Command. Pausing is the act of stopping the
//       progress of the desired intent of a Command with the option of continuing the execution when resuming.
//   
//       A SiLA Client SHOULD be able to pause or resume the Observable Commands at any time. Not every Observable Command
//       might support this Feature. If not, an "OperationNotSupported" Execution Error MUST be thrown.
//   
service PauseController {
    // Pause
    //   
    //         Pause the Command execution. The Command can then be resumed again. The Command Execution Status of the
    //         Observable Command MUST not be affected.
    //   
    rpc Pause(sila2.org.silastandard.core.commands.pausecontroller.v1.Pause_Parameters) returns (sila2.org.silastandard.core.commands.pausecontroller.v1.Pause_Responses) {}
    // Resume
    //   Resume the Command after it has been paused.
    rpc Resume(sila2.org.silastandard.core.commands.pausecontroller.v1.Resume_Parameters) returns (sila2.org.silastandard.core.commands.pausecontroller.v1.Resume_Responses) {}
    // Is SiLA 2 Server Paused ?
    //   Providing Information about the paused state of the SiLA 2 Server.
    rpc Get_Paused(sila2.org.silastandard.core.commands.pausecontroller.v1.Get_Paused_Parameters) returns (sila2.org.silastandard.core.commands.pausecontroller.v1.Get_Paused_Responses) {}
    
}

// ----------------- Data Type definitions -----------------
// UUID
//   A Universally Unique Identifier (UUID) referring to observable command executions.
message DataType_UUID {
    // Constrained type, not reflected in protocol buffers
    sila2.org.silastandard.String UUID = 1;
}

// ------ Command Parameter and Response definitions -------
message Pause_Parameters {
    sila2.org.silastandard.core.commands.pausecontroller.v1.DataType_UUID CommandExecutionUUID = 1;
}

message Pause_Responses {
    
}

message Resume_Parameters {
    sila2.org.silastandard.core.commands.pausecontroller.v1.DataType_UUID CommandExecutionUUID = 1;
}

message Resume_Responses {
    
}
message Get_Paused_Parameters {
    // Empty message
}

message Get_Paused_Responses {
    sila2.org.silastandard.Boolean Paused = 1;
}

// ----------------- Metadata Definitions ------------------
