// Original file: src/framework/protobuf/org.silastandard/ObservableCommandController.proto

import type * as grpc from '@grpc/grpc-js'
import type { MethodDefinition } from '@grpc/proto-loader'
import type { Abort_Parameters as _sila2_org_silastandard_core_observablecommandcontroller_v1_Abort_Parameters, Abort_Parameters__Output as _sila2_org_silastandard_core_observablecommandcontroller_v1_Abort_Parameters__Output } from '../../../../../../sila2/org/silastandard/core/observablecommandcontroller/v1/Abort_Parameters';
import type { Abort_Responses as _sila2_org_silastandard_core_observablecommandcontroller_v1_Abort_Responses, Abort_Responses__Output as _sila2_org_silastandard_core_observablecommandcontroller_v1_Abort_Responses__Output } from '../../../../../../sila2/org/silastandard/core/observablecommandcontroller/v1/Abort_Responses';
import type { Get_SupportedCommands_Parameters as _sila2_org_silastandard_core_observablecommandcontroller_v1_Get_SupportedCommands_Parameters, Get_SupportedCommands_Parameters__Output as _sila2_org_silastandard_core_observablecommandcontroller_v1_Get_SupportedCommands_Parameters__Output } from '../../../../../../sila2/org/silastandard/core/observablecommandcontroller/v1/Get_SupportedCommands_Parameters';
import type { Get_SupportedCommands_Responses as _sila2_org_silastandard_core_observablecommandcontroller_v1_Get_SupportedCommands_Responses, Get_SupportedCommands_Responses__Output as _sila2_org_silastandard_core_observablecommandcontroller_v1_Get_SupportedCommands_Responses__Output } from '../../../../../../sila2/org/silastandard/core/observablecommandcontroller/v1/Get_SupportedCommands_Responses';
import type { Pause_Parameters as _sila2_org_silastandard_core_observablecommandcontroller_v1_Pause_Parameters, Pause_Parameters__Output as _sila2_org_silastandard_core_observablecommandcontroller_v1_Pause_Parameters__Output } from '../../../../../../sila2/org/silastandard/core/observablecommandcontroller/v1/Pause_Parameters';
import type { Pause_Responses as _sila2_org_silastandard_core_observablecommandcontroller_v1_Pause_Responses, Pause_Responses__Output as _sila2_org_silastandard_core_observablecommandcontroller_v1_Pause_Responses__Output } from '../../../../../../sila2/org/silastandard/core/observablecommandcontroller/v1/Pause_Responses';
import type { Resume_Parameters as _sila2_org_silastandard_core_observablecommandcontroller_v1_Resume_Parameters, Resume_Parameters__Output as _sila2_org_silastandard_core_observablecommandcontroller_v1_Resume_Parameters__Output } from '../../../../../../sila2/org/silastandard/core/observablecommandcontroller/v1/Resume_Parameters';
import type { Resume_Responses as _sila2_org_silastandard_core_observablecommandcontroller_v1_Resume_Responses, Resume_Responses__Output as _sila2_org_silastandard_core_observablecommandcontroller_v1_Resume_Responses__Output } from '../../../../../../sila2/org/silastandard/core/observablecommandcontroller/v1/Resume_Responses';

export interface ObservableCommandControllerClient extends grpc.Client {
  Abort(argument: _sila2_org_silastandard_core_observablecommandcontroller_v1_Abort_Parameters, metadata: grpc.Metadata, options: grpc.CallOptions, callback: (error?: grpc.ServiceError, result?: _sila2_org_silastandard_core_observablecommandcontroller_v1_Abort_Responses__Output) => void): grpc.ClientUnaryCall;
  Abort(argument: _sila2_org_silastandard_core_observablecommandcontroller_v1_Abort_Parameters, metadata: grpc.Metadata, callback: (error?: grpc.ServiceError, result?: _sila2_org_silastandard_core_observablecommandcontroller_v1_Abort_Responses__Output) => void): grpc.ClientUnaryCall;
  Abort(argument: _sila2_org_silastandard_core_observablecommandcontroller_v1_Abort_Parameters, options: grpc.CallOptions, callback: (error?: grpc.ServiceError, result?: _sila2_org_silastandard_core_observablecommandcontroller_v1_Abort_Responses__Output) => void): grpc.ClientUnaryCall;
  Abort(argument: _sila2_org_silastandard_core_observablecommandcontroller_v1_Abort_Parameters, callback: (error?: grpc.ServiceError, result?: _sila2_org_silastandard_core_observablecommandcontroller_v1_Abort_Responses__Output) => void): grpc.ClientUnaryCall;
  abort(argument: _sila2_org_silastandard_core_observablecommandcontroller_v1_Abort_Parameters, metadata: grpc.Metadata, options: grpc.CallOptions, callback: (error?: grpc.ServiceError, result?: _sila2_org_silastandard_core_observablecommandcontroller_v1_Abort_Responses__Output) => void): grpc.ClientUnaryCall;
  abort(argument: _sila2_org_silastandard_core_observablecommandcontroller_v1_Abort_Parameters, metadata: grpc.Metadata, callback: (error?: grpc.ServiceError, result?: _sila2_org_silastandard_core_observablecommandcontroller_v1_Abort_Responses__Output) => void): grpc.ClientUnaryCall;
  abort(argument: _sila2_org_silastandard_core_observablecommandcontroller_v1_Abort_Parameters, options: grpc.CallOptions, callback: (error?: grpc.ServiceError, result?: _sila2_org_silastandard_core_observablecommandcontroller_v1_Abort_Responses__Output) => void): grpc.ClientUnaryCall;
  abort(argument: _sila2_org_silastandard_core_observablecommandcontroller_v1_Abort_Parameters, callback: (error?: grpc.ServiceError, result?: _sila2_org_silastandard_core_observablecommandcontroller_v1_Abort_Responses__Output) => void): grpc.ClientUnaryCall;

  Get_SupportedCommands(argument: _sila2_org_silastandard_core_observablecommandcontroller_v1_Get_SupportedCommands_Parameters, metadata: grpc.Metadata, options: grpc.CallOptions, callback: (error?: grpc.ServiceError, result?: _sila2_org_silastandard_core_observablecommandcontroller_v1_Get_SupportedCommands_Responses__Output) => void): grpc.ClientUnaryCall;
  Get_SupportedCommands(argument: _sila2_org_silastandard_core_observablecommandcontroller_v1_Get_SupportedCommands_Parameters, metadata: grpc.Metadata, callback: (error?: grpc.ServiceError, result?: _sila2_org_silastandard_core_observablecommandcontroller_v1_Get_SupportedCommands_Responses__Output) => void): grpc.ClientUnaryCall;
  Get_SupportedCommands(argument: _sila2_org_silastandard_core_observablecommandcontroller_v1_Get_SupportedCommands_Parameters, options: grpc.CallOptions, callback: (error?: grpc.ServiceError, result?: _sila2_org_silastandard_core_observablecommandcontroller_v1_Get_SupportedCommands_Responses__Output) => void): grpc.ClientUnaryCall;
  Get_SupportedCommands(argument: _sila2_org_silastandard_core_observablecommandcontroller_v1_Get_SupportedCommands_Parameters, callback: (error?: grpc.ServiceError, result?: _sila2_org_silastandard_core_observablecommandcontroller_v1_Get_SupportedCommands_Responses__Output) => void): grpc.ClientUnaryCall;
  getSupportedCommands(argument: _sila2_org_silastandard_core_observablecommandcontroller_v1_Get_SupportedCommands_Parameters, metadata: grpc.Metadata, options: grpc.CallOptions, callback: (error?: grpc.ServiceError, result?: _sila2_org_silastandard_core_observablecommandcontroller_v1_Get_SupportedCommands_Responses__Output) => void): grpc.ClientUnaryCall;
  getSupportedCommands(argument: _sila2_org_silastandard_core_observablecommandcontroller_v1_Get_SupportedCommands_Parameters, metadata: grpc.Metadata, callback: (error?: grpc.ServiceError, result?: _sila2_org_silastandard_core_observablecommandcontroller_v1_Get_SupportedCommands_Responses__Output) => void): grpc.ClientUnaryCall;
  getSupportedCommands(argument: _sila2_org_silastandard_core_observablecommandcontroller_v1_Get_SupportedCommands_Parameters, options: grpc.CallOptions, callback: (error?: grpc.ServiceError, result?: _sila2_org_silastandard_core_observablecommandcontroller_v1_Get_SupportedCommands_Responses__Output) => void): grpc.ClientUnaryCall;
  getSupportedCommands(argument: _sila2_org_silastandard_core_observablecommandcontroller_v1_Get_SupportedCommands_Parameters, callback: (error?: grpc.ServiceError, result?: _sila2_org_silastandard_core_observablecommandcontroller_v1_Get_SupportedCommands_Responses__Output) => void): grpc.ClientUnaryCall;

  Pause(argument: _sila2_org_silastandard_core_observablecommandcontroller_v1_Pause_Parameters, metadata: grpc.Metadata, options: grpc.CallOptions, callback: (error?: grpc.ServiceError, result?: _sila2_org_silastandard_core_observablecommandcontroller_v1_Pause_Responses__Output) => void): grpc.ClientUnaryCall;
  Pause(argument: _sila2_org_silastandard_core_observablecommandcontroller_v1_Pause_Parameters, metadata: grpc.Metadata, callback: (error?: grpc.ServiceError, result?: _sila2_org_silastandard_core_observablecommandcontroller_v1_Pause_Responses__Output) => void): grpc.ClientUnaryCall;
  Pause(argument: _sila2_org_silastandard_core_observablecommandcontroller_v1_Pause_Parameters, options: grpc.CallOptions, callback: (error?: grpc.ServiceError, result?: _sila2_org_silastandard_core_observablecommandcontroller_v1_Pause_Responses__Output) => void): grpc.ClientUnaryCall;
  Pause(argument: _sila2_org_silastandard_core_observablecommandcontroller_v1_Pause_Parameters, callback: (error?: grpc.ServiceError, result?: _sila2_org_silastandard_core_observablecommandcontroller_v1_Pause_Responses__Output) => void): grpc.ClientUnaryCall;
  pause(argument: _sila2_org_silastandard_core_observablecommandcontroller_v1_Pause_Parameters, metadata: grpc.Metadata, options: grpc.CallOptions, callback: (error?: grpc.ServiceError, result?: _sila2_org_silastandard_core_observablecommandcontroller_v1_Pause_Responses__Output) => void): grpc.ClientUnaryCall;
  pause(argument: _sila2_org_silastandard_core_observablecommandcontroller_v1_Pause_Parameters, metadata: grpc.Metadata, callback: (error?: grpc.ServiceError, result?: _sila2_org_silastandard_core_observablecommandcontroller_v1_Pause_Responses__Output) => void): grpc.ClientUnaryCall;
  pause(argument: _sila2_org_silastandard_core_observablecommandcontroller_v1_Pause_Parameters, options: grpc.CallOptions, callback: (error?: grpc.ServiceError, result?: _sila2_org_silastandard_core_observablecommandcontroller_v1_Pause_Responses__Output) => void): grpc.ClientUnaryCall;
  pause(argument: _sila2_org_silastandard_core_observablecommandcontroller_v1_Pause_Parameters, callback: (error?: grpc.ServiceError, result?: _sila2_org_silastandard_core_observablecommandcontroller_v1_Pause_Responses__Output) => void): grpc.ClientUnaryCall;

  Resume(argument: _sila2_org_silastandard_core_observablecommandcontroller_v1_Resume_Parameters, metadata: grpc.Metadata, options: grpc.CallOptions, callback: (error?: grpc.ServiceError, result?: _sila2_org_silastandard_core_observablecommandcontroller_v1_Resume_Responses__Output) => void): grpc.ClientUnaryCall;
  Resume(argument: _sila2_org_silastandard_core_observablecommandcontroller_v1_Resume_Parameters, metadata: grpc.Metadata, callback: (error?: grpc.ServiceError, result?: _sila2_org_silastandard_core_observablecommandcontroller_v1_Resume_Responses__Output) => void): grpc.ClientUnaryCall;
  Resume(argument: _sila2_org_silastandard_core_observablecommandcontroller_v1_Resume_Parameters, options: grpc.CallOptions, callback: (error?: grpc.ServiceError, result?: _sila2_org_silastandard_core_observablecommandcontroller_v1_Resume_Responses__Output) => void): grpc.ClientUnaryCall;
  Resume(argument: _sila2_org_silastandard_core_observablecommandcontroller_v1_Resume_Parameters, callback: (error?: grpc.ServiceError, result?: _sila2_org_silastandard_core_observablecommandcontroller_v1_Resume_Responses__Output) => void): grpc.ClientUnaryCall;
  resume(argument: _sila2_org_silastandard_core_observablecommandcontroller_v1_Resume_Parameters, metadata: grpc.Metadata, options: grpc.CallOptions, callback: (error?: grpc.ServiceError, result?: _sila2_org_silastandard_core_observablecommandcontroller_v1_Resume_Responses__Output) => void): grpc.ClientUnaryCall;
  resume(argument: _sila2_org_silastandard_core_observablecommandcontroller_v1_Resume_Parameters, metadata: grpc.Metadata, callback: (error?: grpc.ServiceError, result?: _sila2_org_silastandard_core_observablecommandcontroller_v1_Resume_Responses__Output) => void): grpc.ClientUnaryCall;
  resume(argument: _sila2_org_silastandard_core_observablecommandcontroller_v1_Resume_Parameters, options: grpc.CallOptions, callback: (error?: grpc.ServiceError, result?: _sila2_org_silastandard_core_observablecommandcontroller_v1_Resume_Responses__Output) => void): grpc.ClientUnaryCall;
  resume(argument: _sila2_org_silastandard_core_observablecommandcontroller_v1_Resume_Parameters, callback: (error?: grpc.ServiceError, result?: _sila2_org_silastandard_core_observablecommandcontroller_v1_Resume_Responses__Output) => void): grpc.ClientUnaryCall;

}

export interface ObservableCommandControllerHandlers extends grpc.UntypedServiceImplementation {
  Abort: grpc.handleUnaryCall<_sila2_org_silastandard_core_observablecommandcontroller_v1_Abort_Parameters__Output, _sila2_org_silastandard_core_observablecommandcontroller_v1_Abort_Responses>;

  Get_SupportedCommands: grpc.handleUnaryCall<_sila2_org_silastandard_core_observablecommandcontroller_v1_Get_SupportedCommands_Parameters__Output, _sila2_org_silastandard_core_observablecommandcontroller_v1_Get_SupportedCommands_Responses>;

  Pause: grpc.handleUnaryCall<_sila2_org_silastandard_core_observablecommandcontroller_v1_Pause_Parameters__Output, _sila2_org_silastandard_core_observablecommandcontroller_v1_Pause_Responses>;

  Resume: grpc.handleUnaryCall<_sila2_org_silastandard_core_observablecommandcontroller_v1_Resume_Parameters__Output, _sila2_org_silastandard_core_observablecommandcontroller_v1_Resume_Responses>;

}

export interface ObservableCommandControllerDefinition extends grpc.ServiceDefinition {
  Abort: MethodDefinition<_sila2_org_silastandard_core_observablecommandcontroller_v1_Abort_Parameters, _sila2_org_silastandard_core_observablecommandcontroller_v1_Abort_Responses, _sila2_org_silastandard_core_observablecommandcontroller_v1_Abort_Parameters__Output, _sila2_org_silastandard_core_observablecommandcontroller_v1_Abort_Responses__Output>
  Get_SupportedCommands: MethodDefinition<_sila2_org_silastandard_core_observablecommandcontroller_v1_Get_SupportedCommands_Parameters, _sila2_org_silastandard_core_observablecommandcontroller_v1_Get_SupportedCommands_Responses, _sila2_org_silastandard_core_observablecommandcontroller_v1_Get_SupportedCommands_Parameters__Output, _sila2_org_silastandard_core_observablecommandcontroller_v1_Get_SupportedCommands_Responses__Output>
  Pause: MethodDefinition<_sila2_org_silastandard_core_observablecommandcontroller_v1_Pause_Parameters, _sila2_org_silastandard_core_observablecommandcontroller_v1_Pause_Responses, _sila2_org_silastandard_core_observablecommandcontroller_v1_Pause_Parameters__Output, _sila2_org_silastandard_core_observablecommandcontroller_v1_Pause_Responses__Output>
  Resume: MethodDefinition<_sila2_org_silastandard_core_observablecommandcontroller_v1_Resume_Parameters, _sila2_org_silastandard_core_observablecommandcontroller_v1_Resume_Responses, _sila2_org_silastandard_core_observablecommandcontroller_v1_Resume_Parameters__Output, _sila2_org_silastandard_core_observablecommandcontroller_v1_Resume_Responses__Output>
}
