// Original file: src/framework/protobuf/org.silastandard/ObservableCommandController.proto

import type { DataType_UUID as _sila2_org_silastandard_core_observablecommandcontroller_v1_DataType_UUID, DataType_UUID__Output as _sila2_org_silastandard_core_observablecommandcontroller_v1_DataType_UUID__Output } from '../../../../../../sila2/org/silastandard/core/observablecommandcontroller/v1/DataType_UUID';

export interface Resume_Parameters {
  'CommandExecutionUUID'?: (_sila2_org_silastandard_core_observablecommandcontroller_v1_DataType_UUID | null);
}

export interface Resume_Parameters__Output {
  'CommandExecutionUUID': (_sila2_org_silastandard_core_observablecommandcontroller_v1_DataType_UUID__Output | null);
}
